Mejoras y documentas de la interfaz del juego bugfind

--- a/BugFind/html5/styles.css
+++ b/BugFind/html5/styles.css
@@ -12,3 +12,19 @@ body{
 
 }
 
+.bugfind{
+
+   font-size:47pt;
+   color:#009e0f
+
+}
+
+.cortador{
+   font-size:8pt;
+   color:#000000
+}
+
+.tabla{
+   font-size:6pt;
+   color:#000000
+}
